--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang = "en">
 
 <head>
-    <link rel = "stylesheet" href = "assignment1.css">
+    <link rel = "stylesheet" href = "styles.css">
     <meta charset = "UTF-8">
     <title>ITEC 3020 Assignment 1</title>
 </head>
