Changes: - Change logo and rename to "iZone" - Navigation bar redesign - Moved navigation bar to the top - Added Search field and button - Added animated background

--- a/index.html
+++ b/index.html
@@ -10,37 +10,35 @@
 
 <body>
 
+<div id = "allContent">
+
 <div id = "header">
-
-    <img src = "img/Mobile Zone.png"/>
-    <h1>The Phone Zone</h1>
+    <img id = "logo" src = "img/logo.png"/>
+    <div id="tableOfContents">
+        <a href="#header" class="button nav">Home</a>
+        <a href="#productDescription" class="button nav">Description</a>
+        <a href="#features" class="button nav">Features and Specs</a>
+        <a href="#modelSelection" class="button nav">Model Selection</a>
+        <a href="#colourSelection" class="button nav">Colour Selection</a>
+        <a href="#storageSelection" class="button nav">Storage Selection</a>
+        <a href="#finalConfiguration" class="button nav cart">Cart</a>
+        <form>
+            <input id="search" type="text" placeholder="Search..." name="search">
+            <button type="submit" class="button nav search">Search</button>
+        </form>
+    </div>
 
 </div>
 
 <br/>
 <br/>
-
-<div id = "tableOfContents">
-
-    <h3> Table of Contents:</h3>
-    <ol>
-        <li><a href = "#header"><button class = "button nav">Welcome</button></a></li>
-        <li><a href = "#productDescription"><button class = "button nav">Description</button></a></li>
-        <li><a href = "#features"><button class = "button nav">Features and Specs</button></a></li>
-        <li><a href = "#modelSelection"><button class = "button nav">Model Selection</button></a></li>
-        <li><a href = "#colourSelection"><button class = "button nav">Colour Selection</button></a></li>
-        <li><a href = "#storageSelection"><button class = "button nav">Storage Selection</button></a></li>
-        <li><a href = "#finalConfiguration"><button class = "button nav">Cart</button></a></li>
-    </ol>
-
-</div>
 
 <div id = "mainContent">
 
     <br/>
 
     <h2>iPhone 15 and iPhone 15 Pro</h2>
-    <img src = "img/iPhone 15.png" class = "center"/>
+    <img src = "img/iPhone.png" class = "center"/>
 
     <div id = "productDescription">
 
@@ -184,6 +182,7 @@
 
     </div>
 
+</div>
 </div>
 
 </body>
