Initial work on JS implementation. Redesigned phone selection layout

--- a/index.html
+++ b/index.html
@@ -37,150 +37,164 @@
 
     <br/>
 
-    <h2>iPhone 15 and iPhone 15 Pro</h2>
-    <img src = "img/iPhone.png" class = "center"/>
+    <div id = "modelSelection">
+
+        <h2>SELECT YOUR MODEL</h2>
+        <button class = "button black model">iPhone 15</button>
+        <button class = "button black model">iPhone 15 Plus</button>
+        <button class = "button black model">iPhone 15 Pro</button>
+        <button class = "button black model">iPhone 15 Pro Max</button>
+
+    </div>
+
+    <img src = "img/iPhone_15_Black.png" class = "phone"/>
+
+    <div id = "phoneInfo">
+        <h2 id="phoneName">iPhone 15</h2>
+        <div id = "colourSelection">
+            <h2 class = "subheading">Select Colour</h2>
+            <button class = "button colour-selection black"></button>
+            <button class = "button colour-selection blue"></button>
+            <button class = "button colour-selection yellow"></button>
+            <button class = "button colour-selection green"></button>
+            <button class = "button colour-selection pink"></button>
+        </div>
+        <div id = "storageSelection">
+            <h2 class = "subheading">Select Storage</h2>
+            <button class = "button storage-selection">128 GB</button>
+            <button class = "button storage-selection">256 GB</button>
+            <button class = "button storage-selection">512 GB</button>
+            <button class = "button storage-selection">1 TB</button>
+        </div>
+    </div>
 
     <div id = "productDescription">
-
-        <h2>Product Description</h2>
+        <h2 class = "subheading">Product Description</h2>
         <p>The Apple iPhone 15 brings you Dynamic Island, a 48MP main camera with 2X Telephoto, and USB-C—all in a
             durable colour-infused glass and aluminum design. It features a 6.1" Super Retina XDR display which is up
             to 2x brighter in the sun compared to iPhone 14.</p>
-
-        <p>The Apple iPhone 15 Pro's features the groundbreaking A17 Pro chip, a customizable Action button, and a
-            powerful iPhone camera system. Forged in titanium, it boasts a strong and light aerospace-grade titanium
-            design with a textured matte-glass back.</p>
-
     </div>
 
-    <div id = "features">
 
-        <h2>Features and Specs</h2>
+    <!--
+        <div id = "features">
 
-        <h3>iPhone 15 and iPhone 15 Plus</h3>
-        <ul>
-            <li>???</li>
-            <li>???</li>
-            <li>???</li>
-            <li>???</li>
-            <li>???</li>
-        </ul>
+            <h2>Features and Specs</h2>
+
+            <h3>iPhone 15 and iPhone 15 Plus</h3>
+            <ul>
+                <li>???</li>
+                <li>???</li>
+                <li>???</li>
+                <li>???</li>
+                <li>???</li>
+            </ul>
 
 
-        <h3>iPhone 15 Pro and iPhone 15 Pro Max</h3>
+            <h3>iPhone 15 Pro and iPhone 15 Pro Max</h3>
 
-        <ul>
-            <li>???</li>
-            <li>???</li>
-            <li>???</li>
-            <li>???</li>
-            <li>???</li>
-        </ul>
+            <ul>
+                <li>???</li>
+                <li>???</li>
+                <li>???</li>
+                <li>???</li>
+                <li>???</li>
+            </ul>
 
-        <p>For more information, <a href="https://www.apple.com/ca">visit the Apple Store here.</a></p>
+            <p>For more information, <a href="https://www.apple.com/ca">visit the Apple Store here.</a></p>
 
-        <h2>iPhone 15 and iPhone 15 Plus</h2>
-        <img src = "img/All Colours - 15.png" class = "center"/>
+            <h2>iPhone 15 and iPhone 15 Plus</h2>
+            <img src = "img/All Colours - 15.png" class = "center"/>
 
-        <h3>Available colours:</h3>
-        <ul>
-            <li>Black</li>
-            <li>Blue</li>
-            <li>Yellow</li>
-            <li>Green</li>
-            <li>Pink</li>
-        </ul>
+            <h3>Available colours:</h3>
+            <ul>
+                <li>Black</li>
+                <li>Blue</li>
+                <li>Yellow</li>
+                <li>Green</li>
+                <li>Pink</li>
+            </ul>
 
-        <h3>Available storage options:</h3>
-        <ul>
-            <li>128GB</li>
-            <li>256GB</li>
-            <li>512GB</li>
-        </ul>
+            <h3>Available storage options:</h3>
+            <ul>
+                <li>128GB</li>
+                <li>256GB</li>
+                <li>512GB</li>
+            </ul>
 
-        <h2>iPhone 15 Pro and iPhone 15 Pro Max</h2>
-        <img src = "img/All Colours - 15 Pro.png" class = "center"/>
+            <h2>iPhone 15 Pro and iPhone 15 Pro Max</h2>
+            <img src = "img/All Colours - 15 Pro.png" class = "center"/>
 
-        <h3>Available colours:</h3>
-        <ul>
-            <li>Natural Titanium</li>
-            <li>Black Titanium</li>
-            <li>White Titanium</li>
-            <li>Blue Titanium</li>
-        </ul>
+            <h3>Available colours:</h3>
+            <ul>
+                <li>Natural Titanium</li>
+                <li>Black Titanium</li>
+                <li>White Titanium</li>
+                <li>Blue Titanium</li>
+            </ul>
 
-        <h3>Available storage options:</h3>
-        <ul>
-            <li>256GB</li>
-            <li>512GB</li>
-            <li>1TB</li>
-        </ul>
+            <h3>Available storage options:</h3>
+            <ul>
+                <li>256GB</li>
+                <li>512GB</li>
+                <li>1TB</li>
+            </ul>
 
-    </div>
+        </div>
+        <br/>
+        <br/>
 
-    <div id = "modelSelection">
+        <div id = "colourSelection">
 
-        <h2>SELECT YOUR MODEL:</h2>
-        <button class = "button black">iPhone 15</button>
-        <button class = "button black">iPhone 15 Plus</button>
-        <button class = "button black">iPhone 15 Pro</button>
-        <button class = "button black">iPhone 15 Pro Max</button>
+            <h2>SELECT YOUR COLOUR:</h2>
+            <h3>iPhone 15 and iPhone 15 Plus:</h3>
+            <button class = "button black">Black</button>
+            <button class = "button blue">Blue</button>
+            <button class = "button yellow">Yellow</button>
+            <button class = "button green">Green</button>
+            <button class = "button pink">Pink</button>
+            <h3>iPhone 15 Pro and iPhone 15 Pro Max:</h3>
+            <button class = "button natural">Natural Titanium</button>
+            <button class = "button black2">Black Titanium</button>
+            <button class = "button white">White Titanium</button>
+            <button class = "button blue2">Blue Titanium</button>
 
-    </div>
+        </div>
 
-    <br/>
-    <br/>
+        <br/>
+        <br/>
 
-    <div id = "colourSelection">
+        <div id = "storageSelection">
 
-        <h2>SELECT YOUR COLOUR:</h2>
-        <h3>iPhone 15 and iPhone 15 Plus:</h3>
-        <button class = "button black">Black</button>
-        <button class = "button blue">Blue</button>
-        <button class = "button yellow">Yellow</button>
-        <button class = "button green">Green</button>
-        <button class = "button pink">Pink</button>
-        <h3>iPhone 15 Pro and iPhone 15 Pro Max:</h3>
-        <button class = "button natural">Natural Titanium</button>
-        <button class = "button black2">Black Titanium</button>
-        <button class = "button white">White Titanium</button>
-        <button class = "button blue2">Blue Titanium</button>
+            <h2>SELECT YOUR STORAGE:</h2>
+            <h3>iPhone 15 and iPhone 15 Plus:</h3>
+            <button class = "button black">128GB</button>
+            <button class = "button black">256GB</button>
+            <button class = "button black">512GB</button>
+            <h3>iPhone 15 Pro and iPhone 15 Pro Max:</h3>
+            <button class = "button black">256GB</button>
+            <button class = "button black">512GB</button>
+            <button class = "button black">1TB</button>
 
-    </div>
+        </div>
 
-    <br/>
-    <br/>
+        <br/>
+        <br/>
 
-    <div id = "storageSelection">
+        <img src = "img/Prices.png" class = "center"/>
 
-        <h2>SELECT YOUR STORAGE:</h2>
-        <h3>iPhone 15 and iPhone 15 Plus:</h3>
-        <button class = "button black">128GB</button>
-        <button class = "button black">256GB</button>
-        <button class = "button black">512GB</button>
-        <h3>iPhone 15 Pro and iPhone 15 Pro Max:</h3>
-        <button class = "button black">256GB</button>
-        <button class = "button black">512GB</button>
-        <button class = "button black">1TB</button>
+        <br/>
+        <br/>
 
-    </div>
+        <div id = "finalConfiguration">
 
-    <br/>
-    <br/>
+            <h3>Your iPhone model has been chosen. Click here to add to your cart:</h3>
+            <button class = "button black">ADD TO CART</button>
+            <h3>You can review the items in your cart here:</h3>
+            <button class = "button black">VIEW CART</button>
 
-    <img src = "img/Prices.png" class = "center"/>
-
-    <br/>
-    <br/>
-
-    <div id = "finalConfiguration">
-
-        <h3>Your iPhone model has been chosen. Click here to add to your cart:</h3>
-        <button class = "button black">ADD TO CART</button>
-        <h3>You can review the items in your cart here:</h3>
-        <button class = "button black">VIEW CART</button>
-
-    </div>
+        </div>
+        -->
 
 </div>
 </div>
