--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
 
 </div>
 
-<br/>
-<br/>
-
 <div id = "mainContent">
 
     <br/>
@@ -43,13 +40,14 @@
     <div id = "productDescription">
 
         <h2>Product Description</h2>
-        <p>The Apple iPhone 15 brings you Dynamic Island, a 48MP main camera with 2X Telephoto, and USB-C—all in a
-            durable colour-infused glass and aluminum design. It features a 6.1" Super Retina XDR display which is up
-            to 2x brighter in the sun compared to iPhone 14.</p>
-
-        <p>The Apple iPhone 15 Pro's features the groundbreaking A17 Pro chip, a customizable Action button, and a
-            powerful iPhone camera system. Forged in titanium, it boasts a strong and light aerospace-grade titanium
-            design with a textured matte-glass back.</p>
+        <p>The iPhone 15 series brings a whole new design featuring colour-infused back glass and a strong aluminum chassis.
+            The beloved Dynamic Island provides a new way to interact with your notifications and background tasks. Its 6.1-inch
+            display paired with the new 48MP sensors provide excellent clarity to your screen and cameras. New this year is the all-
+            new charging port: USB-C. You can expect faster charging and transfer speeds with the updated port.
+        <p>And for the iPhone 15 Pro series, you can expect a new processor -- the remarkable A17 Pro. Say goodbye to the mute switch
+            and hello to the Action button, where you could customize it to do over 10 different actions in a click. Plus, with the
+            third camera, you get up to 5x optical zoom, with excellent low-light shots. A new Titanium shell boasts a matte-glass back
+            and incredible durability.</p>
 
     </div>
 
