--- a/index.html
+++ b/index.html
@@ -57,22 +57,28 @@
 
         <h3>iPhone 15 and iPhone 15 Plus</h3>
         <ul>
-            <li>???</li>
-            <li>???</li>
-            <li>???</li>
-            <li>???</li>
-            <li>???</li>
+            <li>48MP dual cameras</li>
+            <li>5 bright colours</li>
+            <li>Dynamic Island</li>
+            <li>A16 Bionic chip</li>
+            <li>USB-C</li>
+            <li>iOS 17 with new features like NameDrop</li>
+            <li>6.1-inch or 6.7-inch sizes</li>
+            <li>128GB, 256GB or 512GB storage</li>
         </ul>
 
 
         <h3>iPhone 15 Pro and iPhone 15 Pro Max</h3>
 
         <ul>
-            <li>???</li>
-            <li>???</li>
-            <li>???</li>
-            <li>???</li>
-            <li>???</li>
+            <li>48MP tri cameras</li>
+            <li>4 deep metallic colours</li>
+            <li>Action button</li>
+            <li>A17 Pro chip</li>
+            <li>USB-C</li>
+            <li>iOS 17 with new features like Collaborative Playlists</li>
+            <li>6.1-inch or 6.7-inch sizes</li>
+            <li>256GB, 512GB or 1TB storage</li>
         </ul>
 
         <p>For more information, <a href="https://www.apple.com/ca">visit the Apple Store here.</a></p>
