--- a/index.html
+++ b/index.html
@@ -186,6 +186,12 @@
 
     </div>
 
+    <div id = #suggestedProducts">
+
+        <h3>Here are some other products you might like that pair well with the iPhone 15</h3>
+        
+    </div>
+
 </div>
 </div>
 
