--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
 
         <h3>Your iPhone model has been chosen. Click here to add to your cart:</h3>
         <button class = "button black">ADD TO CART</button>
+        
         <h3>You can review the items in your cart here:</h3>
         <button class = "button black">VIEW CART</button>
 
@@ -188,8 +189,17 @@
 
     <div id = #suggestedProducts">
 
-        <h3>Here are some other products you might like that pair well with the iPhone 15</h3>
-        
+        <h2>Here are some other products you might like that pair well with the iPhone 15</h2>
+
+        <img src = "img/Apple Watch.png" class = "left"/>
+        <h4>Apple Watch Series 9</h4>
+
+        <img src = "img/AirPods.png" class = "center"/>
+        <h4>AirPods Pro (2nd generation)</h4>
+
+        <img src = "img/MacBook.png" class = "right"/>
+        <h4>MacBook Pro (16-inch, M2 Pro)</h4>
+
     </div>
 
 </div>
