--- a/index.html
+++ b/index.html
@@ -191,13 +191,13 @@
 
         <h2>Here are some other products you might like that pair well with the iPhone 15</h2>
 
-        <img src = "img/Apple Watch.png" class = "left" width = 200px/>
+        <img src = "img/Apple Watch.png" class = "leftSug"/>
         <h4>Apple Watch Series 9</h4>
 
-        <img src = "img/AirPods.png" class = "center" width = 200px/>
+        <img src = "img/AirPods.png" class = "centerSug"/>
         <h4>AirPods Pro (2nd generation)</h4>
 
-        <img src = "img/MacBook.png" class = "right" width = 200px/>
+        <img src = "img/MacBook.png" class = "rightSug"/>
         <h4>MacBook Pro (16-inch, M2 Pro)</h4>
 
     </div>
