--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <img src = "img/Apple Watch.png" class = "leftSug"/>
         <h4>Apple Watch Series 9</h4>
 
-        <img src = "img/AirPods.png" class = "centerSug"/>
+        <img src = "img/AirPods.png" class = "leftSug"/>
         <h4>AirPods Pro (2nd generation)</h4>
 
         <img src = "img/MacBook.png" class = "rightSug"/>
