--- a/index.html
+++ b/index.html
@@ -189,14 +189,12 @@
 
     <div id = #suggestedProducts">
 
-        <h2>Here are some other products you might like that pair well with the iPhone 15</h2>
+        <h2>HERE ARE SOME OTHER PRODUCTS YOU MIGHT LIKE THAT PAIR WELL WITH THE IPHONE 15:</h2>
 
         <img src = "img/Apple Watch.png" class = "suggested"/>
         <img src = "img/AirPods.png" class = "suggested"/>
         <img src = "img/MacBook.png" class = "suggested"/>
-        <h4>Apple Watch Series 9</h4>
-        <h4>AirPods Pro (2nd generation)</h4>
-        <h4>MacBook Pro (16-inch, M2 Pro)</h4>
+        <h4>Apple Watch Series 9        AirPods Pro (2nd generation)        MacBook Pro (16-inch, M2 Pro)</h4>
 
     </div>
 
