--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <img src = "img/Apple Watch.png" class = "suggested"/>
         <img src = "img/AirPods.png" class = "suggested"/>
         <img src = "img/MacBook.png" class = "suggested"/>
-        <h4>Apple Watch Series 9         AirPods Pro (2nd generation)         MacBook Pro (16-inch, M2 Pro)</h4>
+        <h4>Apple Watch Series 9 &emsp;&emsp;&emsp; AirPods Pro (2nd generation) &emsp;&emsp;&emsp; MacBook Pro (16-inch, M2 Pro)</h4>
 
     </div>
 
