--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
     <br/>
 
-    <h2>iPhone 15 and iPhone 15 Pro</h2>
+    <h2>IPHONE 15 AND IPHONE 15 PRO</h2>
     <img src = "img/iPhone.png" class = "center"/>
 
     <div id = "productDescription">
 
-        <h2>Product Description</h2>
+        <h2>PRODUCT DESCRIPTION</h2>
         <p>The iPhone 15 series brings a whole new design featuring colour-infused back glass and a strong aluminum chassis.
             The beloved Dynamic Island provides a new way to interact with your notifications and background tasks. Its 6.1-inch
             display paired with the new 48MP sensors provide excellent clarity to your screen and cameras. New this year is the all-
@@ -53,7 +53,7 @@
 
     <div id = "features">
 
-        <h2>Features and Specs</h2>
+        <h2>FEATURES AND SPECS</h2>
 
         <h3>iPhone 15 and iPhone 15 Plus</h3>
         <ul>
