--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
         <img src = "img/Apple Watch.png" class = "suggested"/>
         <img src = "img/AirPods.png" class = "suggested"/>
-        <img src = "img/MacBook.png" class = "suggested" width = 50%/>
+        <img src = "img/MacBook.png" class = "suggested" height = 50%/>
         <h4>Apple Watch Series 9 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
             AirPods Pro (2nd generation) &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
             MacBook Pro (16-inch, M2 Pro)</h4>
