--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
 
         <h2>HERE ARE SOME OTHER PRODUCTS YOU MIGHT LIKE THAT PAIR WELL WITH THE IPHONE 15:</h2>
 
-        <img src = "img/Apple Watch.png" class = "suggested"/>
-        <img src = "img/AirPods.png" class = "suggested"/>
-        <img src = "img/MacBook.png" class = "suggested"/>
+        <img src = "img/Apple Watch.png" class = "suggested1"/>
+        <img src = "img/AirPods.png" class = "suggested2"/>
+        <img src = "img/MacBook.png" class = "suggested3"/>
         <h4>Apple Watch Series 9 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
             AirPods Pro (2nd generation) &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
             MacBook Pro (16-inch, M2 Pro)</h4>
