--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
         <img src = "img/Apple Watch.png" class = "suggested1"/>
         <img src = "img/AirPods.png" class = "suggested2"/>
         <img src = "img/MacBook.png" class = "suggested3"/>
-        <h4>Apple Watch Series 9 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-            AirPods Pro (2nd generation) &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+        <h4>Apple Watch Series 9 &emsp;
+            AirPods Pro (2nd generation) &emsp;
             MacBook Pro (16-inch, M2 Pro)</h4>
 
     </div>
