--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
         <img src = "img/Apple Watch.png" class = "suggested1"/>
         <img src = "img/AirPods.png" class = "suggested2"/>
         <img src = "img/MacBook.png" class = "suggested3"/>
-        <p>Apple Watch Series 9 <span class = "tab"> AirPods Pro (2nd generation) <span class = "tab"> MacBook Pro (16-inch, M2 Pro)</p>
+        <p>Apple Watch Series 9 <span class = "tab240"> AirPods Pro (2nd generation)
+            <span class = "tab200"> MacBook Pro (16-inch, M2 Pro)</p>
 
     </div>
 
