--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel = "stylesheet" href = "styles.css">
     <meta charset = "UTF-8">
     <title>ITEC 3020 Assignment 1</title>
+    <script src="click.js"></script>
 </head>
 
 <body>
@@ -47,7 +48,7 @@
 
     </div>
 
-    <img src = "img/iPhone_15_Black.png" class = "phone"/>
+    <img id = "phone" src = "img/iPhone_15_Black.png"/>
 
     <div id = "phoneInfo">
         <h2 id="phoneName">iPhone 15</h2>
@@ -56,7 +57,6 @@
             <button class = "button colour-selection black"></button>
             <button class = "button colour-selection blue"></button>
             <button class = "button colour-selection yellow"></button>
-            <button class = "button colour-selection green"></button>
             <button class = "button colour-selection pink"></button>
         </div>
         <div id = "storageSelection">
@@ -70,7 +70,7 @@
 
     <div id = "productDescription">
         <h2 class = "subheading">Product Description</h2>
-        <p>The Apple iPhone 15 brings you Dynamic Island, a 48MP main camera with 2X Telephoto, and USB-C—all in a
+        <p id = "description">The Apple iPhone 15 brings you Dynamic Island, a 48MP main camera with 2X Telephoto, and USB-C—all in a
             durable colour-infused glass and aluminum design. It features a 6.1" Super Retina XDR display which is up
             to 2x brighter in the sun compared to iPhone 14.</p>
     </div>
