Move design from feature/js-testing to main

--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
     <img id = "logo" src = "img/logo.png"/>
     <div id="tableOfContents">
         <a href="#header" class="button nav">Home</a>
-        <a href="#productDescription" class="button nav">Description</a>
-        <a href="#features" class="button nav">Features and Specs</a>
-        <a href="#modelSelection" class="button nav">Model Selection</a>
-        <a href="#colourSelection" class="button nav">Colour Selection</a>
-        <a href="#storageSelection" class="button nav">Storage Selection</a>
+        <a href="#modelSelection" class="button nav">Models</a>
+        <a href="#iphone-15" class="button nav">iPhone 15</a>
+        <a href="#iphone-15-pro" class="button nav">iPhone 15 Pro</a>
+        <a href="#other-products" class="button nav">Other Products</a>
         <a href="#finalConfiguration" class="button nav cart">Cart</a>
         <form>
             <input id="search" type="text" placeholder="Search..." name="search">
@@ -31,177 +30,142 @@
 </div>
 
 <div id = "mainContent">
-
     <br/>
+    <div id = "modelSelection">
+        <h2>SELECT YOUR MODEL</h2>
+        <button class = "button black model">iPhone 15</button>
+        <button class = "button black model">iPhone 15 Plus</button>
+        <button class = "button black model">iPhone 15 Pro</button>
+        <button class = "button black model">iPhone 15 Pro Max</button>
+    </div>
 
-    <h2>IPHONE 15 AND IPHONE 15 PRO</h2>
-    <img src = "img/iPhone.png" class = "center"/>
+    <div id = "iphone-15">
 
-    <div id = "productDescription">
+    <img class = "phone" src = "img/iPhone_15_Black.png"/>
 
-        <h2>PRODUCT DESCRIPTION</h2>
-        <p>The iPhone 15 series brings a whole new design featuring colour-infused back glass and a strong aluminum chassis.
+    <div class = "phoneInfo">
+        <h2 class = "phoneName">iPhone 15 and 15 Plus</h2>
+        <div class = "colourSelection">
+            <h2 class = "subheading">Select Colour</h2>
+            <button class = "button colour-selection black"></button>
+            <button class = "button colour-selection blue"></button>
+            <button class = "button colour-selection yellow"></button>
+            <button class = "button colour-selection pink"></button>
+        </div>
+        <div class = "storageSelection">
+            <h2 class = "subheading">Select Storage</h2>
+            <button class = "button storage-selection">128 GB</button>
+            <button class = "button storage-selection">256 GB</button>
+            <button class = "button storage-selection">512 GB</button>
+            <button class = "button storage-selection">1 TB</button>
+        </div>
+        <p>iPhone 15 starts at $1129 and iPhone 15 Plus starts at $1279</p>
+    </div>
+
+    <div class = "productDescription">
+        <h2 class = "subheading">Product Description</h2>
+        <p class = "description">The iPhone 15 series brings a whole new design featuring colour-infused back glass and a strong aluminum chassis.
             The beloved Dynamic Island provides a new way to interact with your notifications and background tasks. Its 6.1-inch
-            display paired with the new 48MP sensors provide excellent clarity to your screen and cameras. New this year is the all-
-            new charging port: USB-C. You can expect faster charging and transfer speeds with the updated port.
-        <p>And for the iPhone 15 Pro series, you can expect a new processor -- the remarkable A17 Pro. Say goodbye to the mute switch
+            display paired with the new 48MP sensors provide excellent clarity to your screen and cameras. New this year is the all-new
+            charging port: USB-C. You can expect faster charging and transfer speeds with the updated port.</p>
+        <br/>
+        <h2 class = "subheading">Product Features</h2>
+        <div class = "features">
+            <ul>
+                <li>48MP dual cameras</li>
+                <li>5 bright colours</li>
+                <li>Dynamic Island</li>
+                <li>A16 Bionic chip</li>
+                <li>USB-C</li>
+                <li>iOS 17 with new features like NameDrop</li>
+                <li>6.1-inch or 6.7-inch sizes</li>
+                <li>128GB, 256GB or 512GB storage</li>
+            </ul>
+            <p>For more information, <a href="https://www.apple.com/ca">visit the Apple Store here.</a></p>
+        </div>
+    </div>
+    </div>
+
+    <div id = "iphone-15-pro">
+    <img class = "phone" src = "img/iPhone_15_Pro_Black_Titanium.png"/>
+
+    <div class = "phoneInfo">
+        <h2 class = "phoneName">iPhone 15 Pro and Pro Max</h2>
+        <div>
+            <h2 class = "subheading">Select Colour</h2>
+            <button class = "button colour-selection titanblack"></button>
+            <button class = "button colour-selection titanblue"></button>
+            <button class = "button colour-selection titannatural"></button>
+            <button class = "button colour-selection titanwhite"></button>
+        </div>
+        <div>
+            <h2 class = "subheading">Select Storage</h2>
+            <button class = "button storage-selection">128 GB</button>
+            <button class = "button storage-selection">256 GB</button>
+            <button class = "button storage-selection">512 GB</button>
+            <button class = "button storage-selection">1 TB</button>
+        </div>
+        <p>iPhone 15 Pro starts at $1449 and iPhone 15 Pro Max starts at $1749</p>
+    </div>
+
+    <div class = "productDescription">
+        <h2 class = "subheading">Product Description</h2>
+        <p class = "description"> For the iPhone 15 Pro series, you can expect a new processor -- the remarkable A17 Pro. Say goodbye to the mute switch
             and hello to the Action button, where you could customize it to do over 10 different actions in a click. Plus, with the
             third camera, you get up to 5x optical zoom, with excellent low-light shots. A new Titanium shell boasts a matte-glass back
             and incredible durability.</p>
-
+        <h2 class = "subheading">Product Features</h2>
+        <div class = "features">
+            <ul>
+                <li>48MP dual cameras</li>
+                <li>5 bright colours</li>
+                <li>Dynamic Island</li>
+                <li>A16 Bionic chip</li>
+                <li>USB-C</li>
+                <li>iOS 17 with new features like NameDrop</li>
+                <li>6.1-inch or 6.7-inch sizes</li>
+                <li>128GB, 256GB or 512GB storage</li>
+            </ul>
+            <p>For more information, <a href="https://www.apple.com/ca">visit the Apple Store here.</a></p>
+        </div>
     </div>
-
-    <div id = "features">
-
-        <h2>FEATURES AND SPECS</h2>
-
-        <h3>iPhone 15 and iPhone 15 Plus</h3>
-        <ul>
-            <li>48MP dual cameras</li>
-            <li>5 bright colours</li>
-            <li>Dynamic Island</li>
-            <li>A16 Bionic chip</li>
-            <li>USB-C</li>
-            <li>iOS 17 with new features like NameDrop</li>
-            <li>6.1-inch or 6.7-inch sizes</li>
-            <li>128GB, 256GB or 512GB storage</li>
-        </ul>
-
-
-        <h3>iPhone 15 Pro and iPhone 15 Pro Max</h3>
-
-        <ul>
-            <li>48MP tri cameras</li>
-            <li>4 deep metallic colours</li>
-            <li>Action button</li>
-            <li>A17 Pro chip</li>
-            <li>USB-C</li>
-            <li>iOS 17 with new features like Collaborative Playlists</li>
-            <li>6.1-inch or 6.7-inch sizes</li>
-            <li>256GB, 512GB or 1TB storage</li>
-        </ul>
-
-        <p>For more information, <a href="https://www.apple.com/ca">visit the Apple Store here.</a></p>
-
-        <h2>iPhone 15 and iPhone 15 Plus</h2>
-        <img src = "img/All Colours - 15.png" class = "center"/>
-
-        <h3>Available colours:</h3>
-        <ul>
-            <li>Black</li>
-            <li>Blue</li>
-            <li>Yellow</li>
-            <li>Green</li>
-            <li>Pink</li>
-        </ul>
-
-        <h3>Available storage options:</h3>
-        <ul>
-            <li>128GB</li>
-            <li>256GB</li>
-            <li>512GB</li>
-        </ul>
-
-        <h2>iPhone 15 Pro and iPhone 15 Pro Max</h2>
-        <img src = "img/All Colours - 15 Pro.png" class = "center"/>
-
-        <h3>Available colours:</h3>
-        <ul>
-            <li>Natural Titanium</li>
-            <li>Black Titanium</li>
-            <li>White Titanium</li>
-            <li>Blue Titanium</li>
-        </ul>
-
-        <h3>Available storage options:</h3>
-        <ul>
-            <li>256GB</li>
-            <li>512GB</li>
-            <li>1TB</li>
-        </ul>
-
     </div>
-
-    <div id = "modelSelection">
-
-        <h2>SELECT YOUR MODEL:</h2>
-        <button class = "button black">iPhone 15</button>
-        <button class = "button black">iPhone 15 Plus</button>
-        <button class = "button black">iPhone 15 Pro</button>
-        <button class = "button black">iPhone 15 Pro Max</button>
-
-    </div>
-
-    <br/>
-    <br/>
-
-    <div id = "colourSelection">
-
-        <h2>SELECT YOUR COLOUR:</h2>
-        <h3>iPhone 15 and iPhone 15 Plus:</h3>
-        <button class = "button black">Black</button>
-        <button class = "button blue">Blue</button>
-        <button class = "button yellow">Yellow</button>
-        <button class = "button green">Green</button>
-        <button class = "button pink">Pink</button>
-        <h3>iPhone 15 Pro and iPhone 15 Pro Max:</h3>
-        <button class = "button natural">Natural Titanium</button>
-        <button class = "button black2">Black Titanium</button>
-        <button class = "button white">White Titanium</button>
-        <button class = "button blue2">Blue Titanium</button>
-
-    </div>
-
-    <br/>
-    <br/>
-
-    <div id = "storageSelection">
-
-        <h2>SELECT YOUR STORAGE:</h2>
-        <h3>iPhone 15 and iPhone 15 Plus:</h3>
-        <button class = "button black">128GB</button>
-        <button class = "button black">256GB</button>
-        <button class = "button black">512GB</button>
-        <h3>iPhone 15 Pro and iPhone 15 Pro Max:</h3>
-        <button class = "button black">256GB</button>
-        <button class = "button black">512GB</button>
-        <button class = "button black">1TB</button>
-
-    </div>
-
-    <br/>
-    <br/>
-
-    <img src = "img/Prices.png" class = "center"/>
-
-    <br/>
-    <br/>
 
     <div id = "finalConfiguration">
-
         <h3>Your iPhone model has been chosen. Click here to add to your cart:</h3>
         <button class = "button black">ADD TO CART</button>
-        
+
         <h3>You can review the items in your cart here:</h3>
         <button class = "button black">VIEW CART</button>
-
     </div>
 
-    <div id = #suggestedProducts">
+    <div id = "other-products">
+        <h2>HERE ARE SOME OTHER PRODUCTS YOU MIGHT LIKE THAT PAIR WELL WITH THE IPHONE 15</h2>
 
-        <h2>HERE ARE SOME OTHER PRODUCTS YOU MIGHT LIKE THAT PAIR WELL WITH THE IPHONE 15:</h2>
+        <figure>
+            <img src = "img/Apple Watch.png"/>
+            <figcaption>Apple Watch Series 9</figcaption>
+        </figure>
 
-        <img src = "img/Apple Watch.png" class = "suggested1"/>
-        <img src = "img/AirPods.png" class = "suggested2"/>
-        <img src = "img/MacBook.png" class = "suggested3"/>
-        <p>Apple Watch Series 9 <span class = "tab240"> AirPods Pro (2nd generation)
-            <span class = "tab200"> MacBook Pro (16-inch, M2 Pro)</p>
+        <figure>
+            <img src = "img/AirPods.png"/>
+            <figcaption>AirPods Pro (2nd generation)</figcaption>
+        </figure>
 
+        <figure>
+            <img src = "img/MacBook.png"/>
+            <figcaption>MacBook Pro (16-inch, M2 Pro)</figcaption>
+        </figure>
     </div>
+
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2023 iZone. All rights reserved.</p>
+        </div>
+    </footer>
 
 </div>
 </div>
-
 </body>
 
 </html>
