Fixed iPhone 15 Pro features

--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
         <h2 class = "subheading">Product Features</h2>
         <div class = "features">
             <ul>
-                <li>48MP dual cameras</li>
-                <li>5 bright colours</li>
-                <li>Dynamic Island</li>
-                <li>A16 Bionic chip</li>
+                <li>48MP tri cameras</li>
+                <li>4 deep metallic colours</li>
+                <li>Action button</li>
+                <li>A17 Pro chip</li>
                 <li>USB-C</li>
-                <li>iOS 17 with new features like NameDrop</li>
+                <li>iOS 17 with new features like Collaborative Playlists</li>
                 <li>6.1-inch or 6.7-inch sizes</li>
-                <li>128GB, 256GB or 512GB storage</li>
+                <li>256GB, 512GB or 1TB storage</li>
             </ul>
             <p>For more information, <a href="https://www.apple.com/ca">visit the Apple Store here.</a></p>
         </div>
