Add links to other products

--- a/index.html
+++ b/index.html
@@ -144,17 +144,17 @@
 
         <figure>
             <img src = "img/Apple Watch.png"/>
-            <figcaption>Apple Watch Series 9</figcaption>
+            <figcaption><a href = "https://www.apple.com/ca/apple-watch-series-9/">Apple Watch Series 9</a></figcaption>
         </figure>
 
         <figure>
             <img src = "img/AirPods.png"/>
-            <figcaption>AirPods Pro (2nd generation)</figcaption>
+            <figcaption><a href = "https://www.apple.com/ca/airpods-pro/">AirPods Pro (2nd generation)</a></figcaption>
         </figure>
 
         <figure>
             <img src = "img/MacBook.png"/>
-            <figcaption>MacBook Pro (16-inch, M2 Pro)</figcaption>
+            <figcaption><a href = "https://www.apple.com/ca/macbook-pro-14-and-16/">MacBook Pro (16-inch, M2 Pro)</a></figcaption>
         </figure>
     </div>
 
