Add alt to all images

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id = "allContent">
 
 <div id = "header">
-    <img id = "logo" src = "img/logo.png"/>
+    <img id = "logo" src = "img/logo.png" alt="Logo"/>
     <div id="tableOfContents">
         <a href="#header" class="button nav">Home</a>
         <a href="#modelSelection" class="button nav">Models</a>
@@ -41,7 +41,7 @@
 
     <div id = "iphone-15">
 
-    <img class = "phone" src = "img/iPhone_15_Black.png"/>
+    <img class = "phone" src = "img/iPhone_15_Black.png" alt="iPhone 15 Black"/>
 
     <div class = "phoneInfo">
         <h2 class = "phoneName">iPhone 15 and 15 Plus</h2>
@@ -87,7 +87,7 @@
     </div>
 
     <div id = "iphone-15-pro">
-    <img class = "phone" src = "img/iPhone_15_Pro_Black_Titanium.png"/>
+    <img class = "phone" src = "img/iPhone_15_Pro_Black_Titanium.png" alt="iPhone 15 Pro Black Titanium"/>
 
     <div class = "phoneInfo">
         <h2 class = "phoneName">iPhone 15 Pro and Pro Max</h2>
@@ -143,17 +143,17 @@
         <h2>HERE ARE SOME OTHER PRODUCTS YOU MIGHT LIKE THAT PAIR WELL WITH THE IPHONE 15</h2>
 
         <figure>
-            <img src = "img/Apple Watch.png"/>
+            <img src = "img/Apple Watch.png" alt="Apple Watch Series 9"/>
             <figcaption><a href = "https://www.apple.com/ca/apple-watch-series-9/">Apple Watch Series 9</a></figcaption>
         </figure>
 
         <figure>
-            <img src = "img/AirPods.png"/>
+            <img src = "img/AirPods.png" alt="AirPods Pro 2 (2nd generation)"/>
             <figcaption><a href = "https://www.apple.com/ca/airpods-pro/">AirPods Pro (2nd generation)</a></figcaption>
         </figure>
 
         <figure>
-            <img src = "img/MacBook.png"/>
+            <img src = "img/MacBook.png" alt="MacBook Pro (16-inch, M2 Pro)"/>
             <figcaption><a href = "https://www.apple.com/ca/macbook-pro-14-and-16/">MacBook Pro (16-inch, M2 Pro)</a></figcaption>
         </figure>
     </div>
